Risk model refactoring and small improvements